src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

* {
  border: 1px solid #f00 !important;
}

@font-face {
  font-family: 'ACaslonPro-Regular';
  src: url('fonts/ACaslonPro-Regular.otf');
}

@font-face {
  font-family: 'Springville-Regular3';
  src: url('fonts/Springville-Regular3.otf');
}

/*/NAVBAR*/

.navbar {
  position: sticky;
  width: auto;
  align-items: center;
  display: flex;
  max-height: 122px;
  /* max-width: 500px; */
  /* flex: 1; */
  justify-content: space-between;
  padding: 4% 8% 4% 8%;
  /* max-width: 1440px; */
  top: 0;
}

.navbar-items {
  /* width: 100%; */
  display: flex;
  justify-content: flex-end;
  font-size: 8px;
  color: #828282;
  font-family: arial;
  font-weight: bold;
}


/* .navbar > p:last-of-type {
  padding-left: 20%;
} */

.navbar > img {
  height: 5%;
  width: 30%;
  /* flex-direction: row;
  justify-content: flex-start; */
  /* float: left; */
}

.hamburger,
.login {
  margin-left: 20%;
  flex-direction: row;
  justify-content: flex-end;
  /* background-color: blue; */
}

/*/CAROUSEL*/

.carousel-text-container {
  position: absolute;
  z-index: 10;
  top: 35%;
  display: flex;
  justify-content: flex-start;
  width: 100%;
  max-width: 1440px;
  color: white;
}

.carousel-text {
  padding-left: calc(100vw * 0.1);
  padding-right: calc(100vw * 0.1);
}

.carousel-title {
  font-family: 'Springville-Regular3', serif;
  font-size: 4vw;
}

.carousel-description {
  font-size: 1.2vw;
}

.carousel-date {
  font-size: 2vw;
}

.carousel-description,
.carousel-date {
  padding-top: 2%;
  font-family: 'ACaslonPro-Regular', serif;
}

/*/POSTS*/

.post {
  width: 33.3%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 30px;
}


.post-title,
.post-byline,
.post-link {
  font-family: 'Springville-Regular3', serif;
}

.post-link {
  text-decoration: underline;
}

.post-title{
  font-size: 3vw;
}

.post-title:hover {
  text-decoration: underline;
}

.post-date {
  font-family: arial;
  font-size: 1vw;
  color: #828282;
}

/*/FOOTER*/

.footer {
  text-align: center;
  position: absolute;
  bottom: 0;
  width: 100%;
  font-size: 1vw;
  color: #131313;
  font-weight: arial;
  font-weight: bold;
}

.footer a:link {
  color: #131313;
}

.footer a:visited {
  color: #828282;
}

